<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Unit Testing Simple Calculator</string>
    <string name="hint1">First value..</string>
    <string name="hint2">Second value..</string>
    <string name="resultLabel">Result:</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="instructions">Instructions</string>

    <string name="exception_empty">Empty values</string>
    <string name="exception_dividebyzero">Can\'t divide by 0</string>

    <string name="instructions_lorem">Lorem ipsum dolor sit amet,
consectetur adipiscing elit. Ut euismod, nibh sed commodo varius
, ligula odio pulvinar nisl, sit amet bibendum magna tellus in
magna. Nunc a massa tellus. Fusce dignissim mollis neque eget
vulputate. Lorem ipsum dolor sit amet.</string>
    <string name="back">Back</string>
    <string name="hintOp">op</string>
</resources>
